Fix issue with navbar not being able to expand on smaller screens

--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,5 +1,5 @@
 @import '../../styles/base/_constants.scss';
 
 .navbar {
-	height: $header-size;
+	min-height: $header-size;
 }
